fix: refactoring baseentity, beansconfig and main class